feature: add FilterBy element to Subscriptions List Table

--- a/src/Views/Components/ListTable/InterweaveSSR/styles.scss
+++ b/src/Views/Components/ListTable/InterweaveSSR/styles.scss
@@ -92,7 +92,8 @@
             --color: var(--givewp-green-25);
         }
 
-        &--trash {
+        &--trash,
+        &--trashed {
             --bg-color: var(--givewp-red-700);
             --color: var(--givewp-red-25);
         }
