fix: update notices positioning on campaign details page

--- a/src/Views/Components/AdminDetailsPage/AdminDetailsPage.module.scss
+++ b/src/Views/Components/AdminDetailsPage/AdminDetailsPage.module.scss
@@ -286,6 +286,7 @@
 
 .pageContent {
     padding: var(--givewp-spacing-4) var(--givewp-spacing-6);
+    position: relative;
 
     &.fullWidth {
         padding: var(--givewp-spacing-4) 0;
